Use subpath for inbox server
