# charts/inbox-server/values.openapiv3_schema.yaml
@@ -1065,6 +1065,8 @@ properties:
     type: object
   dns:
     properties:
+      domain:
+        type: string
       emailDomain:
         type: string
       targetIPs:
@@ -1072,6 +1074,7 @@ properties:
           type: string
         type: array
     required:
+    - domain
     - emailDomain
     - targetIPs
     type: object
@@ -1221,6 +1224,22 @@ properties:
         type: integer
       replicaJmapInstanceCount:
         type: integer
+      secret:
+        properties:
+          adminJWTPublicKey:
+            type: string
+          dkimPrivateKey:
+            type: string
+          jwtPrivateKey:
+            type: string
+          jwtPublicKey:
+            type: string
+        required:
+        - adminJWTPublicKey
+        - dkimPrivateKey
+        - jwtPrivateKey
+        - jwtPublicKey
+        type: object
       tls:
         properties:
           secretName:
